:mag: Add meta description, fix color contrast and img aria

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
     --color-background-dark: #1e1e1e;
     --color-background-light: #1e1e1e;
     --color-default: #f8f8f8;
-    --color-neutral: #b0b0b0;
+    --color-neutral: #ccc;
     --color-primary: white;
     --color-action: #57F1BA;
     --color-action-dark: #51E9E8;
